# roso

./: CMakeLists.txt  README.md  calibration.cpp  config.json  parameters.yaml  roso.cpp  server.py
src/: calibration.cpp  detection.pb.cc  detection.pb.h  detection.proto  receiver.cpp  roso.cpp
test/: test_capture  test_capture.cpp  version_opencv
